proper graph spacing and <p> size correction

--- a/src/styles/RenderLandingPage.less
+++ b/src/styles/RenderLandingPage.less
@@ -46,20 +46,23 @@
     justify-content: space-evenly;
     
 }
+div{
+    display: block;
+}
 .grant-rates-by-office-graph-container{
     text-align: center;
     height: 165px;
     font-size: 1.5rem;
     font-family: "acumin";
 }
-.grant-rates-by-nationality-graph-container{
+.grant-rates-by-nationality-container{
     text-align: center;
     margin-bottom: 3%;
     margin-left: -15px;
     font-size: 1.5rem;
     font-family: "acumin";
 }
-.grant-rates-over-time-graph-container {
+.grant-rates-over-time-container {
         text-align: center;
         height: 165px;
         font-size: 1.5rem;
@@ -82,11 +85,7 @@
     width: 300px;
     margin-bottom: 10%;
 }
-
-
-// .grant-rates-by-office-graph-container p,
-// .grant-rates-by-nationality-graph-container p,
-p {
+.graphs-section p   {
     margin-top: 0;
     margin-bottom: 1em;
     display: block;
